DIMUNITE ISSUE 1 UPLOAD

--- a/Press.html
+++ b/Press.html
@@ -114,7 +114,7 @@
     	<h1 align="center">DIMUNITE VIII Issue</h1>
     	<hr class="hrtitle">
     	<center>
-		<img hspace="3.5%" class="imgbtn" src="images/Press/Coming Soon.jpg" width = "158.4px" height ="234.8px">
+		<img hspace="3.5%" class="imgbtn" src="images/Press/DIMUNITE ISSUE 1.jpg" width = "158.4px" height ="234.8px">
 		<img hspace="3.5%" class="imgbtn" src="images/Press/Coming Soon.jpg" width = "158.4px" height ="234.8px">
 		<img hspace="3.5%" class="imgbtn" src="images/Press/Coming Soon.jpg" width = "158.4px" height ="234.8px">
 		</center>
@@ -169,7 +169,11 @@
     {
     window.scrollTo(0, 0)
     }
-	
+		
+	function Issue1VIII()
+		{
+			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 1.pdf")
+		}
 	function Issue1()
 		{
 			window.open("pdfs/Press/DIMUNITE issue 1 .pdf")
