--- a/Spotlight.html
+++ b/Spotlight.html
@@ -126,97 +126,81 @@
 		<div class="sectionContent">
 			<ul class="nino-portfolioItems">
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_0981.JPG">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_0981.JPG">
 						<img src="images/Spotlight_Photos/IMG_0981.JPG" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-crown nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_0995.JPG">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_0995.JPG">
 						<img src="images/Spotlight_Photos/IMG_0995.JPG" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-cube-outline nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+			
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_0998.JPG">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_0998.JPG">
 						<img src="images/Spotlight_Photos/IMG_0998.JPG" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-cube-outline nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+
 							</div>
 						</div>
 					</a>
 				</li>
                 <li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_1036.JPG">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_1036.JPG">
 						<img src="images/Spotlight_Photos/IMG_1036.JPG" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-cube-outline nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+	
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_1121.JPG">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_1121.JPG">
 						<img src="images/Spotlight_Photos/IMG_1121.JPG" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-flower nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_1130.jpg">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_1130.jpg">
 						<img src="images/Spotlight_Photos/IMG_1130.jpg" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-gamepad-variant nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_1149.jpg">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_1149.jpg">
 						<img src="images/Spotlight_Photos/IMG_1149.jpg" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-gnome nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+		
 							</div>
 						</div>
 					</a>
 				</li>
 				<li class="item">
-					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Development Mobile" href="images/Spotlight_Photos/IMG_1209.jpg">
+					<a class="nino-prettyPhoto" rel="prettyPhoto[gallery1]" title="Click To View" href="images/Spotlight_Photos/IMG_1209.jpg">
 						<img src="images/Spotlight_Photos/IMG_1209.jpg" />
 						<div class="overlay">
 							<div class="content">
-								<i class="mdi mdi-guitar-electric nino-icon"></i>
-								<h4 class="title">creatively designed</h4>
-								<span class="desc">Lorem ipsum dolor sit</span>
+
 							</div>
 						</div>
 					</a>
