--- a/Transport.html
+++ b/Transport.html
@@ -107,9 +107,11 @@
     			<span class="text" style="display: none;">Close map</span>
     		</h2>
     		<div class="mapWrap">
-	    	<iframe width="100%" height="600" src="https://www.mapsdirections.info/en/custom-google-maps/map.php?width=100%&height=600&hl=ru&q=Dulwich%20College%20Beijing%20Legend%20Garden%20Campus+(DIMUN)&ie=UTF8&t=&z=17&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	    	<iframe width="100%" height="600" src="https://maps.google.com/maps?width=100%&height=600&hl=en&coord=40.0395341,116.5672363&q=+(Dulwich%20College%20Beijing)&ie=UTF8&t=&z=16&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 	    	</div>
     	</div>
+ 
+
     </section>
     <br><br>
     <h1 align="center">    &nbsp;&nbsp;Hotels</h1><hr>  
