--- a/Press.html
+++ b/Press.html
@@ -115,7 +115,7 @@
     	<hr class="hrtitle">
     	<center>
 		<img hspace="3.5%" class="imgbtn" onClick="Issue1VIII();" src="images/Press/DIMUNITE ISSUE 1.jpg" width = "158.4px" height ="234.8px">
-		<img hspace="3.5%" class="imgbtn" src="images/Press/Coming Soon.jpg" width = "158.4px" height ="234.8px">
+		<img hspace="3.5%" class="imgbtn" onClick="Issue2VIII();" src="images/Press/WeChat Image_20180302234459.png" width = "158.4px" height ="234.8px">
 		<img hspace="3.5%" class="imgbtn" src="images/Press/Coming Soon.jpg" width = "158.4px" height ="234.8px">
 		</center>
    		</section>
@@ -173,6 +173,10 @@
 	function Issue1VIII()
 		{
 			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 1.pdf")
+		}
+	function Issue2VIII()
+		{
+			window.open("pdfs/Press/VIII/DIMUNITE ISSUE 2.pdf")
 		}
 	function Issue1()
 		{
