Alumni OCD Change

--- a/Conference.html
+++ b/Conference.html
@@ -556,92 +556,99 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
         	
         	<style type="text/css">
 				.tg  {border-collapse:collapse;border-spacing:0;}
-				.tg td{color:black;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-				.tg th{color:black;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-				.tg .tg-wk8r{background-color:#ffffff;border-color:#ffffff;text-align:center;vertical-align:top}
+				.tg td{font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;color:black;}
+				.tg th{font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black; color:black;}
+				.tg .tg-ouf3{font-weight:bold;font-size:26px;background-color:#ffffff;border-color:#ffffff;vertical-align:top}
 				.tg .tg-m2il{font-weight:bold;font-size:26px;background-color:#ffffff;border-color:#ffffff;text-align:center;vertical-align:top}
 				.tg .tg-b0es{font-weight:bold;background-color:#ffffff;border-color:#ffffff;text-align:center;vertical-align:top}
+				.tg .tg-c1kk{background-color:#ffffff;border-color:#ffffff;text-align:right;vertical-align:top}
+				.tg .tg-i1fj{background-color:#ffffff;color:#333333;border-color:#ffffff;vertical-align:top}
+				.tg .tg-ref9{font-weight:bold;background-color:#ffffff;border-color:#ffffff;text-align:right;vertical-align:top}
+				.SortOfCenter{
+					position: absolute;
+					top:200px;
+					left:375px;
+				}
 			</style>
-			<center>
+			<div class="SortOfCenter">
 			<br><br>
-			<table class="tg" style="undefined;table-layout: fixed; width: 671px">
+			<table class="tg" style="undefined;table-layout: fixed; width: 643px">
 			<colgroup>
-			<col style="width: 161px">
-			<col style="width: 157px">
-			<col style="width: 353px">
+			<col style="width: 140px">
+			<col style="width: 144px">
+			<col style="width: 359px">
 			</colgroup>
 			  <tr>
-				<th class="tg-m2il">DIMUN</th>
-				<th class="tg-m2il">NAME</th>
-				<th class="tg-m2il">EDUCATION</th>
+				<th class="tg-m2il">YEAR</th>
+				<th class="tg-ouf3" colspan="2">SECRETARY-GENERAL</th>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">I</td>
-				<td class="tg-wk8r">Miranda Melcher</td>
-				<td class="tg-wk8r">Yale Graduate, King’s College PhD Candidate</td>
+				<td class="tg-b0es">DIMUN I</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Miranda Melcher,</span></td>
+				<td class="tg-i1fj">Yale Graduate, King’s College PhD Candidate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">II</td>
-				<td class="tg-wk8r">Benjamin Tan</td>
-				<td class="tg-wk8r">Oxford Undergraduate</td>
+				<td class="tg-b0es">DIMUN II</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Benjamin Tan,</span> </td>
+				<td class="tg-i1fj">Oxford Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">III</td>
-				<td class="tg-wk8r">Richard Zhuang</td>
-				<td class="tg-wk8r">Imperial College London Masters Candidate</td>
+				<td class="tg-b0es">DIMUN III</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Richard Zhuang,</span> </td>
+				<td class="tg-i1fj">Imperial College London Masters Candidate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">III</td>
-				<td class="tg-wk8r">Kyoka Kosugi</td>
-				<td class="tg-wk8r">Brown Undergraduate</td>
+				<td class="tg-b0es">DIMUN III</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Kyoka Kosugi,</span> </td>
+				<td class="tg-i1fj">Brown Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">IV</td>
-				<td class="tg-wk8r">JinJu Choi </td>
-				<td class="tg-wk8r">SNU Undergraduate</td>
+				<td class="tg-b0es">DIMUN IV</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">JinJu Choi,</span> </td>
+				<td class="tg-i1fj">SNU Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">V</td>
-				<td class="tg-wk8r">Matthew Xie</td>
-				<td class="tg-wk8r">Carnegie Mellon Undergraduate</td>
+				<td class="tg-b0es">DIMUN V</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Matthew Xie,</span> </td>
+				<td class="tg-i1fj">Carnegie Mellon Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">V</td>
-				<td class="tg-wk8r">Julie Kim</td>
-				<td class="tg-wk8r">KUBS Undergraduate</td>
+				<td class="tg-b0es">DIMUN V</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Julie Kim,</span></td>
+				<td class="tg-i1fj">KUBS Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VI</td>
-				<td class="tg-wk8r">Silvia Shen</td>
-				<td class="tg-wk8r">Oxford Undergraduate</td>
+				<td class="tg-b0es">DIMUN VI</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Silvia Shen,</span></td>
+				<td class="tg-i1fj">Oxford Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VI</td>
-				<td class="tg-wk8r">Johanna Shen</td>
-				<td class="tg-wk8r">Yale Undergraduate</td>
+				<td class="tg-b0es">DIMUN VI</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Johanna Shen,</span> </td>
+				<td class="tg-i1fj">Yale Undergraduate</td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VII</td>
-				<td class="tg-wk8r">Yi Wen Lee</td>
-				<td class="tg-wk8r"></td>
+				<td class="tg-b0es">DIMUN VII</td>
+				<td class="tg-c1kk"><span style="font-weight:bold">Yi Wen Lee</span></td>
+				<td class="tg-i1fj"></td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VII</td>
-				<td class="tg-wk8r">Haerin Kim</td>
-				<td class="tg-wk8r"></td>
+				<td class="tg-b0es">DIMUN VII</td>
+				<td class="tg-ref9">Haerin Kim</td>
+				<td class="tg-i1fj"></td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VIII</td>
-				<td class="tg-wk8r">Jackel Cheung</td>
-				<td class="tg-wk8r"></td>
+				<td class="tg-b0es">DIMUN VIII</td>
+				<td class="tg-ref9">Jackel Cheung</td>
+				<td class="tg-i1fj"></td>
 			  </tr>
 			  <tr>
-				<td class="tg-b0es">VIII</td>
-				<td class="tg-wk8r">Sunho Kwon</td>
-				<td class="tg-wk8r"></td>
+				<td class="tg-b0es">DIMUN VIII</td>
+				<td class="tg-ref9">Sunho Kwon</td>
+				<td class="tg-i1fj"></td>
 			  </tr>
 			</table>
-        	</center>
+        	</div>
         	<br><br>
 		</div>
     </div>
