--- a/Conference.html
+++ b/Conference.html
@@ -520,8 +520,8 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 			<br><br>
 			Every Secretary-General, before and after me, pledge to guide, lead and stand to serve each participant of DIMUN, and I have faith that the legacy of DIMUN will continue to unreservedly serve the global community. 
 			<br><br>
-			Jackel Cheung<br>
-			<em>Secretary-General DIMUN VIII, March 2017-2018<br>
+			<em><strong>Jackel Cheung</strong><br>
+			Secretary-General DIMUN VIII, March 2017-2018<br>
 			MUN/Debating Prefect 2017-2018<br> 
 			Dulwich College Beijing Class of 2019  <br></em>
 			</h4>
@@ -536,12 +536,12 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 			The Dulwich International Model United Nations (DIMUN) conference was created to bring MUN to students often considered too young to fully understand, appreciate, and participate in the complexities of politics, debates, and problem-solving. When we came up with the idea for DIMUN, at around sixteen years old, we had already attended several Model UN conferences around the Asia Pacific and knew that this perception was completely wrong. <br><br>
 			DIMUN was therefore founded to provide opportunities for Key Stage 3 (middle school) to experience Model UN in an academically rigorous but supportive environment, with the guidance that new delegates and directors deserve. At the heart of the DIMUN experience is the belief that MUN should be by and for students, and that with open minds, curiosity, and creativity, students are willing and able to rise to every challenge. 
 			<br><br>
-			<em>Miranda Melcher <br>
+			<em><strong>Miranda Melcher</strong> <br>
 			Founder of DIMUN <br>
 			Secretary-General DIMUN I, February 2011<br>
 			President of Model United Nations at Dulwich College Beijing, 2009-2012 <br>
 			Dulwich College Beijing Class of 2012 <br><br>
-			Benjamin Tan<br>
+			<strong>Benjamin Tan</strong><br>
 			Secretary-General DIMUN II, February 2012<br>
 			President of Model United Nations at Dulwich College Beijing, 2012-2013<br>
 			Dulwich College Beijing Class of 2013, Head Boy</em><br><br><br></h4>
