--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			<h4 class="nino-sectionDesc">Honourable MUN Directors, esteemed delegates, respected committee Chairs and welcome guests,<br><br>
             DIMUN is back! The ninth annual Dulwich International Model United Nations conference (DIMUN IX) will be held at Dulwich College Beijing from 1st of March to 3rd of March.<br><br>
             Model United Nations is a unique opportunity for students to expand their knowledge of world affairs and improve their public speaking skills through research, discussion and debate with other international students who share the same passions.<br><br>
-            At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) Chairs and the DIMUNITE press team, led by Secretaries-General Kevin Yeo and Jennifer Zhou.<br><br>
+            At DIMUN IX, Key Stage 3 (middle school) delegates will be debating a total of 34 topics in eight different committees. The conference will be supported by experienced Key Stage 4/5 (high school) Chairs and the DIMUNITE press team, led by Secretaries-General Kevin Yao and Jennifer Zhou.<br><br>
             Please do not hesitate to contact us for more information, or any questions regarding the conference at dimun@dulwich-beijing.cn.
             </h4>
             <h3 class="nino-sectionDesc">* IMPORTANT *</h3>
