--- a/Committees.html
+++ b/Committees.html
@@ -260,27 +260,29 @@
 <h3>GA1: </h3>
 <p>Combating the spread of diseases in South-East Asia<br>
 Addressing the misconduct of UN peacekeepers<br>
-Improving access to clean water and medical supplies in developing countries<br>
-Ensuring voting security in transitional countries </p>
+Improving access to clean water and medical infrastructure in Afghanistan<br>
+Ensuring voting security in transitional countries in the Balkan region</p>
 
 
 <h3>GA2: </h3>
 <p>Measures to prevent the spread of mosquito-borne diseases<br>
-Measures to aid the transition to renewable energy in developing nations<br>
-Protecting the rights of non-combatant individuals in conflict zones<br>
+	Measures to aid the transition to renewable energy in developing East Asian nations<br>
+Protecting the rights of non-combatant individuals in in the Yemeni Civil War<br>
 Measures to recover radiation contaminated zones</p>
 
 
 <h3>ENV:</h3>
 <p>Preventing the acceleration of climate change<br>
-Measures to restore environments damaged by man-made disasters<br>
+	Measures to restore environments damaged by man-made disasters in the Caribbean<br>
 Combating desertification in Sub-Saharan Africa<br>
 Sustainable urban planning in rapidly developing countries</p>
 
 
 <h3>ECOSOC:</h3>
-<p>Addressing the issue of urban slums<br>
-Improving infrastructure for technological growth in developing economies<br>
+<p>Addressing the issue of urban slums in South America
+<br>
+Improving infrastructure for technological growth in developing African economies
+<br>
 Addressing the economic crisis in Venezuela<br>
 Addressing the role of the internet in international crime</p>
 
@@ -293,8 +295,8 @@ Measures to rehabilitate internally displaced persons</p>
 
 
 <h3>SPC: (non state actors)</h3>
-<p>Measures to improve recognition of racial minorities<br>
-Measures to facilitate peace negotiation with terrorist organisations<br>
+<p>Measures to improve recognition of Kurdish minorities in the Middle East<br>
+Measures to facilitate peace discussion with remaining ISIS groups in Syria<br>
 Measures to reduce violence from drug cartels in Mexico<br>
 Preventing the distribution of counterfeit medicine</p>
 
