--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="item">
 						<h2 class="nino-sectionHeading">
 							<span class="nino-subHeading">DIMUN</span>
-							Explore The<br>Committiees
+							Explore The<br>Committees
 						</h2>
 						<a href="Committees.html" class="nino-btn">Explore</a>
 					</div>
@@ -122,7 +122,7 @@
 					</li>
 					<li data-target="#nino-slider" data-slide-to="1">
 						<div class="inner">
-							<span class="number">02</span> Committiees
+							<span class="number">02</span> Committees
 						</div>
 					</li>
 					<li data-target="#nino-slider" data-slide-to="2">
