--- a/Conference.html
+++ b/Conference.html
@@ -90,7 +90,7 @@
                                     <span class="nino-subHeading">Meet Our</span>
                                     Student Executive Officer Team
                                 </h2>
-                                <p align="center">The DIMUN conference is organised and run by an organising team made entirely of students, with the support of Dulwich College Beijing and MUN Directors. Leading this team and DIMUN VIII are the Executive Student Officers below:</p>
+                                <p align="center">The DIMUN conference is organised and run by an organising team made entirely of students, with the support of Dulwich College Beijing and MUN Directors. Leading this team and DIMUN IX are the Executive Student Officers below:</p>
 
                                 <div class="sectionContent">
 
