--- a/Committees.html
+++ b/Committees.html
@@ -294,7 +294,7 @@ Addressing the issue of child labourers in Asia<br>
 Measures to rehabilitate internally displaced persons</p>
 
 
-<h3>SPC: (non state actors)</h3>
+<h3>SPC:</h3>
 <p>Measures to improve recognition of Kurdish minorities in the Middle East<br>
 Measures to facilitate peace discussion with remaining ISIS groups in Syria<br>
 Measures to reduce violence from drug cartels in Mexico<br>
