--- a/Conference.html
+++ b/Conference.html
@@ -180,9 +180,7 @@
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote" ><br><br>Esteemed directors, student officers, delegates, and guests, <br><br>
-Esteemed directors, honourable chairs and respected delegates,
-<br><br>
+                                                                                    <p class="quote" ><br><br>Esteemed directors, honourable chairs and respected delegates, <br><br>
 Welcome to DIMUN IX! I am delighted to serve this conference as your Secretary-General. From debating resolutions as a delegate, to running committees as a chair, and finally to overseeing DIMUN as a member of the core team, I have treasured every moment of my MUN journey. DIMUN is a place for passionate young delegates to hone their skills of diplomacy, debate issues of global relevance, and form long-lasting bonds with their peers from around the world. I hope we can work together this year to create an enjoyable and productive conference.
 </p>
 
