--- a/Conference.html
+++ b/Conference.html
@@ -225,13 +225,11 @@ Welcome to DIMUN IX! I am delighted to serve this conference as your Secretary-G
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honorable directors, distinguished participants, and welcomed guests,
+                                                                                    <p class="quote"><br><br>Honourable Directors, Delegates and Chairs. 
 <br><br>
-My name is Sunho Kwon, and it is my utmost honor to be serving as your Secretary General for this year’s DIMUN VIII conference. DIMUN provides an opportunity to all participants to foster both their global awareness and debating experience. Most importantly, DIMUN has been and will continue to be proud of its unique vibe of enthusiasm, which creates a welcoming atmosphere that nurtures the new delegates and acts as a space for close interaction and social activities between all participants. No matter how experienced you are and no matter where you are from, you will be able to reap a completely new experience and learn a valuable lesson from DIMUN.
+My name is Kevin Yao and It is my greatest honour to serve you as the Secretary-General of DIMUN IX. DIMUN is a wonderful event that grows each year and we are exciting to welcome our new school delegations, as well as returning faces, to this great community of thinkers, leaders and debaters. For the delegates, I hope you take this conference as a chance to grow and develop. Every idea that you give will be on more step on your MUN journey. Perhaps this is your first conference, perhaps it is not. Nevertheless, I hope you take this opportunity and use it to the fullest extent.
 <br><br>
-I started walking on the path of MUN 2 years ago. Starting as a delegate, I have faced countless challenges to overcome my shy personality. MUN was definitely the turning point of my life, where I completely changed my personality and fully developed as a leader. Above all, I can clearly remember all the conferences I have been through and all the people I have met. Every conference taught me something new, and I believed this unique experience had to be spread. This acted as a fuel to drive me forward and helped me take the final step. I am now here to assist leading DIMUN VIII, allowing all participants to go through the unique experience I was lucky enough to get.
-<br><br>
-Welcome to DIMUN VIII.
+This said, I look forward to seeing fruitful debate, diplomatic resolutions and passionate discussion. Welcome to DIMUN IX!
 </p>
 
                                                                                 </div>
