--- a/Conference.html
+++ b/Conference.html
@@ -181,9 +181,9 @@
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Esteemed directors, honourable chairs and respected delegates,
 <br><br>
-Welcome to DIMUN VIII! It is with great honour that I will be serving this conference as your Secretary-General Emeritus. Whether you are a seasoned diplomat or completely new to MUN, this conference will provide a completely new experience for everyone – DIMUN conferences are more than just a place for intellectual sparring, they are gatherings where students forge bonds with one another and create treasured memories that stay with them throughout their MUN career.
+Welcome to DIMUN IX! It is with great honour that I will be serving this conference as your Secretary-General Emeritus. Whether you are a seasoned diplomat or completely new to MUN, this conference will provide a completely new experience for everyone – DIMUN conferences are more than just a place for intellectual sparring, they are gatherings where students forge bonds with one another and create treasured memories that stay with them throughout their MUN career.
  <br><br>
-																						Since I entered the MUN community four years ago, I have been to numerous conferences as an admin, a delegate, a chair and as a Secretary-General. These powerful experiences have helped me foster a growing appreciation for this subject and I hope that DIMUN will positively impact you in many ways. Indeed, I am confident that this year’s team will give you ample opportunity to make the most of DIMUN VIII. </p>
+																						Since I entered the MUN community four years ago, I have been to numerous conferences as an admin, a delegate, a chair and as a Secretary-General. These powerful experiences have helped me foster a growing appreciation for this subject and I hope that DIMUN will positively impact you in many ways. Indeed, I am confident that this year’s team will give you ample opportunity to make the most of DIMUN IX. </p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
