--- a/Conference.html
+++ b/Conference.html
@@ -515,7 +515,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
             <h1 align="center">Conference Theme</h1>
             <hr class="hrtitle">
 
-            <h1 align="center" class="DirectorsText">Looking forward through the past</h1>
+            <h1 align="center" class="DirectorsText">Beyond Borders</h1>
         </div>
 
         <div class="mySlides2 w3-container">
