Added Head of Tech description:

--- a/Conference.html
+++ b/Conference.html
@@ -425,7 +425,11 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote">hello!
+																					<p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+<br><br>
+it is an honour to be serving as your Head of Admin for this year’s DIMUN VIII conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
+ <br><br>
+Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
 																					</p>
                                                                                 </div>
                                                                             </div>
