--- a/Conference.html
+++ b/Conference.html
@@ -165,6 +165,27 @@
                                                                 </center>
                                                             </div>
 
+							<div class="col-md-4 col-sm-6 item ">
+                                                               <center>
+                                                                <h1 class="nino-serviceTitle">Deputy-Head of Admin</h1>
+                                                                <img class="demo imgbtn" onclick="currentDiv(10)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+																</center>
+                                                            </div>
+
+                                                            <div class="col-md-4 col-sm-6 item ">
+                                                              <center>
+                                                               <h1 class="nino-serviceTitle">Deputy-Head Of Press</h1>
+                                                                <img class="demo imgbtn" onclick="currentDiv(11)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+																</center>
+                                                            </div>
+
+                                                            <div class="col-md-4 col-sm-6 item ">
+                                                                <center>
+                                                                <h1 class="nino-serviceTitle">Deputy-Head of Tech</h1>
+                                                                <img class="demo imgbtn" onclick="currentDiv(12)" src="images/ConferencePg/nopicture.jpg" height=165px width=165px>
+                                                                </center>
+                                                            </div>	
+							
                                                             </div>
                                                             <br><br><br>
 
@@ -326,14 +347,13 @@ Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do ev
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+                                                                                    <p class="quote"><br><br>Esteemed directors, chairs and respected delegates,
 <br><br>
-It is my upmost honor to be selected the Head of Press for DIMUN VIII. Being a member of the Press Team last year, I experienced the magic of DIMUN: watching young students dressed so smartly, talking about the future of the planet. Sitting in the room with these vibrant delegates and future world leaders has enabled me to learn so much too.
- <br><br>
-The Press Team will be responsible to produce three issues of the DIMUNITE magazine during the course of the conference. These magazines will include highlights from the day, articles published by experienced student-writers, as well as fun activities such as crosswords and word-searches. Our photographers will also be tirelessly taking photos that will be available on request for all the participating schools.
- <br><br>
-Again, it is a huge honor to serve as this role, and I look forward to seeing you all!
-																					</p>
+It is an honour to be the Head of Press for this year’s DIMUN IX conference. DIMUN is a place to meet new people, learn and discuss about a wide variety of global issues.  
+<br><br>
+The Press Team will be producing three issues of DIMUNITE, an annual DIMUN magazine. This will include interviews, articles and some exciting activities. I will try my best together with the deputy Head of Press , Adelle Yan, and members of the executive team to provide a worthwhile DIMUN experience.<br><br>
+
+</p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
@@ -401,14 +421,10 @@ Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do ev
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-                                                                                    <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+                                                                                    <p class="quote"><br><br>Honourable delegates, directors and chairs, welcome to DIMUN IX! 
 <br><br>
-It is my upmost honor to be selected the Head of Press for DIMUN VIII. Being a member of the Press Team last year, I experienced the magic of DIMUN: watching young students dressed so smartly, talking about the future of the planet. Sitting in the room with these vibrant delegates and future world leaders has enabled me to learn so much too.
- <br><br>
-The Press Team will be responsible to produce three issues of the DIMUNITE magazine during the course of the conference. These magazines will include highlights from the day, articles published by experienced student-writers, as well as fun activities such as crosswords and word-searches. Our photographers will also be tirelessly taking photos that will be available on request for all the participating schools.
- <br><br>
-Again, it is a huge honor to serve as this role, and I look forward to seeing you all!
-																					</p>
+My name is Adelle Yan and it is my pleasure to serve as your Deputy Head of Press this year. The Press Team is in charge of media and overall coverage for the conference; we will be producing a variety of articles, photographs, videos, many which will be published within our DIMUNITE issues, for delegates and directors to enjoy. I wish the delegates the best of luck, and look forward a fruitful conference!<br><br>
+</p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
@@ -427,12 +443,12 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
                                                                                     <img class="img-circle img-thumbnail" src="images/ConferencePg/nopicture.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
-																					<p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
+										<p class="quote"><br><br>Esteemed directors, honourable chairs and respected delegates,
 <br><br>
-it is an honour to be serving as your Head of Admin for this year’s DIMUN VIII conference. DIMUN is a place where great minds connect, great ideas flourish, and great memories are made. More importantly, DIMUN is a place where delegates learn more about what it means to be a citizen of the world.
- <br><br>
-Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do everything I can to ensure that the conference runs as smoothly as possible. We hope to see you soon!
-																					</p>
+It is my greatest pleasure to serve as your Deputy-Head of Tech this year. The Tech Team is in charge of ensuring that your experience with any form of technology during the conference goes smoothly. Our team consists of many talented individuals that are more than capable to assist you when you are in need of assistance. We will try to make this conference as seamless as we can make it! 
+<br><br>
+I wish the delegates the best of luck, and look forward to assisting you throughout the conference!<br><br>
+</p>
                                                                                 </div>
                                                                             </div>
                                                                         </li>
